News UAT/force-app/main/default/objects/OpportunityReport__c/OpportunityReport__c.object-meta.xml
<CustomObject>
    <description>This is a generic template for Custom Object.  With this template, you may adjust the default elements and values and add new elements and values.</description>
    <label>OpportunityReport</label>
    <nameField>
        <label>Opportunity Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>OpportunityReports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>