News UAT/force-app/main/default/objects/OpportunityReport__c/fields/ADM_ASM_Referral__c.field-meta.xml
<CustomField>
    <fullName>ADM_ASM_Referral__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ADM/ASM Referral</label>
    <type>Checkbox</type>
</CustomField>