News UAT/force-app/main/default/objects/OpportunityReport__c/fields/Advertising_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Advertising_End_Date__c</fullName>
    <label>Advertising End Date</label>
    <type>Date</type>
</CustomField>