News UAT/force-app/main/default/objects/OpportunityReport__c/fields/Advertising_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Advertising_Start_Date__c</fullName>
    <label>Advertising Start Date</label>
    <type>Date</type>
</CustomField>