News UAT/force-app/main/default/objects/OpportunityReport__c/fields/Approach_to_Win__c.field-meta.xml
<CustomField>
    <fullName>Approach_to_Win__c</fullName>
    <label>Approach to Win</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>