News UAT/force-app/main/default/objects/OpportunityReport__c/fields/Approved_Sales_Order_Number__c.field-meta.xml
<CustomField>
    <fullName>Approved_Sales_Order_Number__c</fullName>
    <label>Approved Sales Order Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>