News UAT/force-app/main/default/objects/OpportunityReport__c/fields/Bypass_Contact_Validation__c.field-meta.xml
<CustomField>
    <fullName>Bypass_Contact_Validation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bypass Contact Validation</label>
    <type>Checkbox</type>
</CustomField>