News UAT/force-app/main/default/objects/OpportunityReport__c/fields/Campaign_Brief_Form_Completed__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Brief_Form_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Campaign Brief Form Completed</label>
    <type>Checkbox</type>
</CustomField>