News UAT/force-app/main/default/objects/OpportunityReport__c/fields/Campaign_Progress__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Progress__c</fullName>
    <label>Campaign Progress</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>