News UAT/force-app/main/default/objects/OpportunityReport__c/fields/Campaign_Status_c__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Status_c__c</fullName>
    <label>Campaign_Status__c</label>
    <length>255</length>
    <type>Text</type>
</CustomField>