News UAT/force-app/main/default/objects/OpportunityReport__c/fields/Case_Origin_Id__c.field-meta.xml
<CustomField>
    <fullName>Case_Origin_Id__c</fullName>
    <label>Case_Origin_Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>