News UAT/force-app/main/default/objects/OpportunityReport__c/fields/Category_Expertise__c.field-meta.xml
<CustomField>
    <fullName>Category_Expertise__c</fullName>
    <label>Category Expertise</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>