News UAT/force-app/main/default/objects/OpportunityReport__c/fields/Client_Brand__c.field-meta.xml
<CustomField>
    <fullName>Client_Brand__c</fullName>
    <label>Client Brand</label>
    <length>100</length>
    <type>Text</type>
</CustomField>