News UAT/force-app/main/default/objects/OpportunityReport__c/fields/Client_Brand_Objectives__c.field-meta.xml
<CustomField>
    <fullName>Client_Brand_Objectives__c</fullName>
    <label>Client Brand Objectives</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>