News UAT/force-app/main/default/objects/OpportunityReport__c/fields/Client_Commercial_Objectives__c.field-meta.xml
<CustomField>
    <fullName>Client_Commercial_Objectives__c</fullName>
    <label>Client Commercial Objectives</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>