News UAT/force-app/main/default/objects/OpportunityReport__c/fields/Client_Key_Competitors__c.field-meta.xml
<CustomField>
    <fullName>Client_Key_Competitors__c</fullName>
    <label>Client Key Competitors</label>
    <type>TextArea</type>
</CustomField>