News UAT/force-app/main/default/objects/OpportunityReport__c/fields/Client_PO_Reference__c.field-meta.xml
<CustomField>
    <fullName>Client_PO_Reference__c</fullName>
    <label>Client PO Reference</label>
    <length>30</length>
    <type>Text</type>
</CustomField>