News UAT/force-app/main/default/objects/OpportunityReport__c/fields/Close_Date_Past__c.field-meta.xml
<CustomField>
    <fullName>Close_Date_Past__c</fullName>
    <formula>Close_Date__c&lt;= TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Close Date Past</label>
    <type>Checkbox</type>
</CustomField>