News UAT/force-app/main/default/objects/OpportunityReport__c/fields/Close_Date_Variance_Days__c.field-meta.xml
<CustomField>
    <fullName>Close_Date_Variance_Days__c</fullName>
    <formula>ExpectedCloseDate__c - Close_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Close Date Variance (Days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>