News UAT/force-app/main/default/objects/OpportunityReport__c/fields/CloseMonth__c.field-meta.xml
<CustomField>
    <fullName>CloseMonth__c</fullName>
    <formula>MONTH(Close_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CloseMonth</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>