News UAT/force-app/main/default/objects/OpportunityReport__c/fields/CNG_Sales_Representitive__c.field-meta.xml
<CustomField>
    <fullName>CNG_Sales_Representitive__c</fullName>
    <label>CNG Sales Representitive</label>
    <length>100</length>
    <type>Text</type>
</CustomField>