News UAT/force-app/main/default/objects/OpportunityReport__c/fields/Commercial__c.field-meta.xml
<CustomField>
    <fullName>Commercial__c</fullName>
    <inlineHelpText>What is the client trying to achieve?</inlineHelpText>
    <label>Client Commercial Objectives</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>