News UAT/force-app/main/default/objects/OpportunityReport__c/fields/Communication_tone__c.field-meta.xml
<CustomField>
    <fullName>Communication_tone__c</fullName>
    <inlineHelpText>What do they want to say. How do they want to say it?</inlineHelpText>
    <label>Communication / tone</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>