News UAT/force-app/main/default/objects/OpportunityReport__c/fields/Consumer_Behaviour__c.field-meta.xml
<CustomField>
    <fullName>Consumer_Behaviour__c</fullName>
    <inlineHelpText>How they interact on our platforms with our clients</inlineHelpText>
    <label>Consumer Behaviour</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>