News UAT/force-app/main/default/objects/OpportunityReport__c/fields/Count_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Count_Opportunity__c</fullName>
    <description>25/9/13 - Counts the opportunity so it can be used within BY reporting.</description>
    <formula>1</formula>
    <inlineHelpText>Set this opty to count 1: Field only used for reporting formula summary fields (Win/ Loss Ratio). This field should not be displayed in any page layouts.</inlineHelpText>
    <label>Count: Opportunity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>