News UAT/force-app/main/default/objects/OpportunityReport__c/fields/Creative_Charge_Cost_Breakdown__c.field-meta.xml
<CustomField>
    <fullName>Creative_Charge_Cost_Breakdown__c</fullName>
    <inlineHelpText>URL link to cost breakdown</inlineHelpText>
    <label>Creative Charge Cost Breakdown</label>
    <type>Url</type>
</CustomField>