News UAT/force-app/main/default/objects/OpportunityReport__c/fields/CS_Authoriser_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>CS_Authoriser_Email_Address__c</fullName>
    <label>Authoriser Email Address</label>
    <type>Email</type>
</CustomField>