News UAT/force-app/main/default/objects/OpportunityReport__c/fields/cs_PO_Number__c.field-meta.xml
<CustomField>
    <fullName>cs_PO_Number__c</fullName>
    <label>PO Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>