News UAT/force-app/main/default/objects/OpportunityReport__c/fields/cs_Tracking_Number__c.field-meta.xml
<CustomField>
    <fullName>cs_Tracking_Number__c</fullName>
    <label>Tracking Number</label>
    <length>12</length>
    <type>Text</type>
</CustomField>