News UAT/force-app/main/default/objects/OpportunityReport__c/fields/Customer_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Customer_Feedback__c</fullName>
    <description>Feedback to hep close the deal</description>
    <label>Customer Feedback</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>