News UAT/force-app/main/default/objects/OpportunityReport__c/fields/Data_Quality_Score__c.field-meta.xml
<CustomField>
    <fullName>Data_Quality_Score__c</fullName>
    <formula>IF( ISPICKVAL(Type__c,&quot;&quot;), 0,20) + IF( LEN( TEXT(MONTH(Close_Date__c))) = 0, 0,20) + IF( Amount__c &lt;= 0, 0,20) + IF( ISPICKVAL( LeadSource__c,&quot;&quot;), 0,20) + IF( LEN(Next_Step__c)=0, 0,20)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Data Quality Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>