News UAT/force-app/main/default/objects/OpportunityReport__c/fields/Event__c.field-meta.xml
<CustomField>
    <fullName>Event__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used by the NLM Marketing Team</description>
    <label>Event Required</label>
    <type>Checkbox</type>
</CustomField>