News UAT/force-app/main/default/objects/OpportunityReport__c/fields/Events_Charge_Cost_Breakdown__c.field-meta.xml
<CustomField>
    <fullName>Events_Charge_Cost_Breakdown__c</fullName>
    <inlineHelpText>URL link to cost breakdown</inlineHelpText>
    <label>Events Charge Cost Breakdown</label>
    <type>Url</type>
</CustomField>