News UAT/force-app/main/default/objects/OpportunityReport__c/fields/ExpectedCloseDate__c.field-meta.xml
<CustomField>
    <fullName>ExpectedCloseDate__c</fullName>
    <description>Field is populated with the first value entered in the Close Date field and stored for reporting purposes.</description>
    <label>Expected Close Date</label>
    <type>Date</type>
</CustomField>