News UAT/force-app/main/default/objects/OpportunityReport__c/fields/Has_an_Approved_SO__c.field-meta.xml
<CustomField>
    <fullName>Has_an_Approved_SO__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field that is populated with Trigger when there is an Approved CS Sales Order linked to the Opportunity.</description>
    <label>Has an Approved SO</label>
    <type>Checkbox</type>
</CustomField>