News UAT/force-app/main/default/objects/OpportunityReport__c/fields/Insights_Required__c.field-meta.xml
<CustomField>
    <fullName>Insights_Required__c</fullName>
    <label>Insights Required</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>