News UAT/force-app/main/default/objects/OpportunityReport__c/fields/Inspiration__c.field-meta.xml
<CustomField>
    <fullName>Inspiration__c</fullName>
    <inlineHelpText>What they love</inlineHelpText>
    <label>Inspiration</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>