News UAT/force-app/main/default/objects/OpportunityReport__c/fields/Is_Close_Date_Changed__c.field-meta.xml
<CustomField>
    <fullName>Is_Close_Date_Changed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Close Date Changed?</label>
    <type>Checkbox</type>
</CustomField>