News UAT/force-app/main/default/objects/OpportunityReport__c/fields/Last_Modified_via_Salesforce1_c__c.field-meta.xml
<CustomField>
    <fullName>Last_Modified_via_Salesforce1_c__c</fullName>
    <label>Last_Modified_via_Salesforce1</label>
    <type>DateTime</type>
</CustomField>