News UAT/force-app/main/default/objects/OpportunityReport__c/fields/Media_Budget_NLM__c.field-meta.xml
<CustomField>
    <fullName>Media_Budget_NLM__c</fullName>
    <label>Media Budget NLM</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>