News UAT/force-app/main/default/objects/OpportunityReport__c/fields/Media_Earned__c.field-meta.xml
<CustomField>
    <fullName>Media_Earned__c</fullName>
    <label>Media - Earned</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>