News UAT/force-app/main/default/objects/OpportunityReport__c/fields/Media_Owned__c.field-meta.xml
<CustomField>
    <fullName>Media_Owned__c</fullName>
    <label>Media - Owned</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>