News UAT/force-app/main/default/objects/OpportunityReport__c/fields/Media_Paid__c.field-meta.xml
<CustomField>
    <fullName>Media_Paid__c</fullName>
    <label>Media - Paid</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>