News UAT/force-app/main/default/objects/OpportunityReport__c/fields/Non_standard_Client_Requests__c.field-meta.xml
<CustomField>
    <fullName>Non_standard_Client_Requests__c</fullName>
    <label>Non-standard Client Requests</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>