News UAT/force-app/main/default/objects/OpportunityReport__c/fields/Opp_Name__c.field-meta.xml
<CustomField>
    <fullName>Opp_Name__c</fullName>
    <label>Opp Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>