News UAT/force-app/main/default/objects/OpportunityReport__c/fields/Opportunity_Platform__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Platform__c</fullName>
    <label>Opportunity Platform</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Digital</fullName>
            </value>
            <value>
                <fullName>Inserts</fullName>
            </value>
            <value>
                <fullName>NewsXtend</fullName>
            </value>
            <value>
                <fullName>Newspaper</fullName>
            </value>
            <value>
                <fullName>Magazine</fullName>
            </value>
            <value>
                <fullName>Press</fullName>
            </value>
            <value>
                <fullName>Print</fullName>
            </value>
            <value>
                <fullName>Mobile</fullName>
            </value>
            <value>
                <fullName>Integrated</fullName>
            </value>
            <value>
                <fullName>NIMS</fullName>
            </value>
            <value>
                <fullName>Print and Digital</fullName>
            </value>
            <value>
                <fullName>Print only</fullName>
            </value>
            <value>
                <fullName>Digital only</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>